--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,5 @@
 {
-  "manifest_version": 2,
-
+  "manifest_version": 3,
   "name": "Fantasy Salary Ext",
   "version": "0.1.0",
   "description": "Display salary of NBA players",
@@ -12,5 +11,8 @@
     "matches": ["https://fantasy.espn.com/basketball/players/*"]
   }],
 
-  "web_accessible_resources": ["salary.json", "test.json"]
+  "web_accessible_resources": [{
+  "resources": ["salary.json", "test.json"],
+  "matches": ["<all_urls>"]
+}]
 }
